<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>allbot</name>
  <version>0.0.0</version>
  <description>The allbot package</description>
  <maintainer email="nvidia@todo.todo">nvidia</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>allbot_base</exec_depend>
  <exec_depend>allbot_param</exec_depend>
  <exec_depend>allbot_urdf</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
